- add copy callbacks for default plugins presolver dualagg, presolver redvub, branchrule lookahead, branchrule cloud, heuristic dualval, heuristic repair, propagator nlobbt, separator gauge, and separator convexproj missing in SCIPsetCopyPlugins()
- respect maximal round setting of separation by running remaining delayed separators in last round

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- fix SCIP Optimization Suite build with -DSYM=(s)bliss and bliss being downloaded and build during configuration by cmake
- fix use of a bliss cmake installation (from https://github.com/scipopt/bliss) specified via BLISS_DIR if -DSYM=(s)bliss

### Makefile

- the check/solchecker build now finds a GMP installation by Homebrew on macOS/arm64

Miscellaneous
-------------

- the output precision for writing CIP/OPB files has been increased at several places for nonlinear constraints
- the solchecker tool now also supports SCIP solutions without unknown or infinite values

Known bugs
----------

@section RN920 SCIP 9.2.0
*************************

Features
--------

- added check for absolute and relative gap limits at end of synchronization in concurrent solving mode, in order to terminate earlier;
  note that if the concurrent solve is stopped due to a gap limit, the "winner" solver will have an interrupted solution status and
  its primal and dual bounds may not be the best possible ones (use SCIPgetConcurrentPrimalbound() and SCIPgetConcurrentDualbound() instead)
- parse pseudoboolean constraint from CIP format (and add linear-"and"-reformulation)

Performance improvements
------------------------

- reoptimization now also stores propagations from propagators if reoptimization/saveconsprop is enabled;
  the parameter will be renamed to reoptimization/saveprop in a next major release
- imposed stricter limits on the size of disconnected components which may be solved separately during presolve