@@ -4549,15 +4549,7 @@ SCIP_RETCODE applyFixings(
    )
 {
    SCIP_CONSDATA* consdata;
-   SCIP_VAR* var;
-   SCIP_VAR** aggrvars;
-   SCIP_Real val;
-   SCIP_Real* aggrscalars;
-   SCIP_Real fixedval;
-   SCIP_Real aggrconst;
    int v;
-   int naggrvars;
-   int i;
 
    assert(scip != NULL);
    assert(cons != NULL);
@@ -4603,9 +4595,12 @@ SCIP_RETCODE applyFixings(
       v = 0;
       while( v < consdata->nvars )
       {
-         var = consdata->vars[v];
-         val = consdata->vals[v];
+         SCIP_VAR* var = consdata->vars[v];
+         SCIP_Real scalar = consdata->vals[v];
+         SCIP_Real constant = 0.0;
          assert(SCIPvarIsTransformed(var));
+
+         SCIP_CALL( SCIPgetProbvarSum(scip, &var, &scalar, &constant) );
 
          switch( SCIPvarGetStatus(var) )
          {
@@ -4613,20 +4608,59 @@ SCIP_RETCODE applyFixings(
             SCIPerrorMessage("original variable in transformed linear constraint\n");
             return SCIP_INVALIDDATA;
 
+         case SCIP_VARSTATUS_AGGREGATED:
+         case SCIP_VARSTATUS_NEGATED:
+            SCIPerrorMessage("aggregated variable after resolving linear term\n");
+            return SCIP_INVALIDDATA;
+
          case SCIP_VARSTATUS_LOOSE:
          case SCIP_VARSTATUS_COLUMN:
+            if( var != consdata->vars[v] )
+            {
+               assert(scalar != 0.0);
+               SCIP_CALL( addCoef(scip, cons, var, scalar) );
+               SCIP_CALL( delCoefPos(scip, cons, v) );
+
+               assert(!SCIPisInfinity(scip, ABS(constant)));
+               if( !SCIPisInfinity(scip, -consdata->lhs) )
+                  lhssubtrahend += constant;
+               if( !SCIPisInfinity(scip, consdata->rhs) )
+                  rhssubtrahend += constant;
+            }
             ++v;
             break;
 
+         case SCIP_VARSTATUS_MULTAGGR:
+            if( scalar != 0.0 )
+            {
+               SCIP_VAR** aggrvars;
+               SCIP_Real* aggrscalars;
+               SCIP_Real aggrconstant;
+               int naggrvars;
+               int i;
+
+               SCIP_CALL( SCIPflattenVarAggregationGraph(scip, var) );
+               aggrvars = SCIPvarGetMultaggrVars(var);
+               aggrscalars = SCIPvarGetMultaggrScalars(var);
+               aggrconstant = SCIPvarGetMultaggrConstant(var);
+               naggrvars = SCIPvarGetMultaggrNVars(var);
+
+               for( i = 0; i < naggrvars; ++i )
+               {
+                  SCIP_CALL( addCoef(scip, cons, aggrvars[i], scalar * aggrscalars[i]) );
+               }
+
+               constant += scalar * aggrconstant;
+            }
+            /*lint -fallthrough*/
+
          case SCIP_VARSTATUS_FIXED:
-            assert(SCIPisFeasEQ(scip, SCIPvarGetLbGlobal(var), SCIPvarGetUbGlobal(var)));
-            fixedval = SCIPvarGetLbGlobal(var);
             if( !SCIPisInfinity(scip, -consdata->lhs) )
             {
-               if( SCIPisInfinity(scip, ABS(fixedval)) )
+               if( SCIPisInfinity(scip, ABS(constant)) )
                {
                   /* if lhs gets infinity it means that the problem is infeasible */
-                  if( ( val > 0.0 ) != ( fixedval > 0.0 ) )
+                  if( constant < 0.0 )
                   {
                      SCIP_CALL( chgLhs(scip, cons, SCIPinfinity(scip)) );
 
@@ -4642,14 +4676,14 @@ SCIP_RETCODE applyFixings(
                   }
                }
                else
-                  lhssubtrahend += val * fixedval;
+                  lhssubtrahend += constant;
             }
             if( !SCIPisInfinity(scip, consdata->rhs) )
             {
-               if( SCIPisInfinity(scip, ABS(fixedval)) )
+               if( SCIPisInfinity(scip, ABS(constant)) )
                {
                   /* if rhs gets -infinity it means that the problem is infeasible */
-                  if( ( val > 0.0 ) == ( fixedval > 0.0 ) )
+                  if( constant > 0.0 )
                   {
                      SCIP_CALL( chgRhs(scip, cons, -SCIPinfinity(scip)) );
 
@@ -4665,65 +4699,8 @@ SCIP_RETCODE applyFixings(
                   }
                }
                else
-                  rhssubtrahend += val * fixedval;
+                  rhssubtrahend += constant;
             }
-            SCIP_CALL( delCoefPos(scip, cons, v) );
-            break;
-
-         case SCIP_VARSTATUS_AGGREGATED:
-         {
-            SCIP_VAR* activevar = SCIPvarGetAggrVar(var);
-            SCIP_Real activescalar = SCIPvarGetAggrScalar(var);
-            SCIP_Real activeconstant = SCIPvarGetAggrConstant(var);
-
-            assert(activevar != NULL);
-            SCIP_CALL( SCIPgetProbvarSum(scip, &activevar, &activescalar, &activeconstant) );
-            assert(activevar != NULL);
-            SCIP_CALL( addCoef(scip, cons, activevar, val * activescalar) );
-
-            if( activeconstant != 0.0 )
-            {
-               if( !SCIPisInfinity(scip, -consdata->lhs) )
-                  lhssubtrahend += val * activeconstant;
-               if( !SCIPisInfinity(scip, consdata->rhs) )
-                  rhssubtrahend += val * activeconstant;
-            }
-
-            SCIP_CALL( delCoefPos(scip, cons, v) );
-            break;
-         }
-         case SCIP_VARSTATUS_MULTAGGR:
-            SCIP_CALL( SCIPflattenVarAggregationGraph(scip, var) );
-            naggrvars = SCIPvarGetMultaggrNVars(var);
-            aggrvars = SCIPvarGetMultaggrVars(var);
-            aggrscalars = SCIPvarGetMultaggrScalars(var);
-            aggrconst = SCIPvarGetMultaggrConstant(var);
-
-            for( i = 0; i < naggrvars; ++i )
-            {
-               SCIP_CALL( addCoef(scip, cons, aggrvars[i], val * aggrscalars[i]) );
-            }
-
-            if( aggrconst != 0.0 )
-            {
-               if( !SCIPisInfinity(scip, -consdata->lhs) )
-                  lhssubtrahend += val * aggrconst;
-               if( !SCIPisInfinity(scip, consdata->rhs) )
-                  rhssubtrahend += val * aggrconst;
-            }
-
-            SCIP_CALL( delCoefPos(scip, cons, v) );
-            break;
-
-         case SCIP_VARSTATUS_NEGATED:
-            SCIP_CALL( addCoef(scip, cons, SCIPvarGetNegationVar(var), -val) );
-            aggrconst = SCIPvarGetNegationConstant(var);
-
-            if( !SCIPisInfinity(scip, -consdata->lhs) )
-               lhssubtrahend += val * aggrconst;
-            if( !SCIPisInfinity(scip, consdata->rhs) )
-               rhssubtrahend += val * aggrconst;
-
             SCIP_CALL( delCoefPos(scip, cons, v) );
             break;
 
